--- a/about/index.html
+++ b/about/index.html
@@ -245,7 +245,7 @@
     <div class="about-container">
         <div class="about-header">
             <h1><i class="fas fa-user-circle"></i> 关于作者</h1>
-            <p>热爱技术，专注于软件开发与创新</p>
+            <p>小旗搭建，让搭建网站变得简单！</p>
         </div>
 
         <div class="about-content">
@@ -256,17 +256,15 @@
                 </h2>
                 <div class="section-content">
                     <div class="highlight-box">
-                        <p>大家好，我叫Tom，来自于北京，专业是计算机技术。在过去的5年中，我一直在某大型互联网公司担任软件工程师，专注于Java/Python/Javascript的开发和研究。</p>
+                        <p>大家好，我是小旗，来自于北京，因为喜欢搭建各种网站所以我想把这行做下去，当然我是业余的，主要在网站找大佬找同行学习各种相关知识。</p>
                     </div>
-                    <p>在大学期间，我就开始对编程产生浓厚的兴趣，通过自学和实践，我掌握了各种编程语言和开发工具。在工作的期间，我主要负责开发和维护公司的后端系统，涉及到的主要技术栈是Java和Spring Boot。在这个过程中，我积累了丰富的经验，能够熟练地使用Java进行后端开发，并且能够快速地解决开发过程中遇到的各种问题。</p>
-                    <p>除了Java和Spring Boot，我还熟悉Python、C++等其他编程语言，并且能够使用JavaScript进行前端开发。此外，我还熟悉数据库的操作，能够熟练使用MySQL、Oracle等数据库管理系统。</p>
-                </div>
+                    <p>各种网站搭建，个人主页，博客网站，导航网站，影视网站，商城网站，支付收款网站等，还有安全优化，网站加速，服务器，域名必备的工具。>xi>
             </div>
 
             <div class="section">
                 <h2 class="section-title">
                     <i class="fas fa-code"></i>
-                    技术栈
+                    技能
                 </h2>
                 <div class="skills-grid">
                     <div class="skill-item">
@@ -308,17 +306,17 @@
                     <li>
                         <i class="fab fa-github"></i>
                         <strong>GitHub:</strong>
-                        <a href="https://github.com/geeeeeeeek" target="_blank">https://github.com/geeeeeeeek</a>
+                        <a href="https://github.com/" target="_blank">https://github.com/geeeeeeeek</a>
                     </li>
                     <li>
                         <i class="fas fa-globe"></i>
                         <strong>个人主页:</strong>
-                        <a href="https://web.gitapp.cn" target="_blank">https://web.gitapp.cn</a>
+                        <a href="https://web.gitapp.cn" target="_blank">https://xqdj.site</a>
                     </li>
                     <li>
                         <i class="fas fa-envelope"></i>
                         <strong>邮箱:</strong>
-                        <a href="mailto:kefu308@gmail.com">kefu308@gmail.com</a>
+                        <a href="mailto:xqdj@protonmail.com">xqdj@protonmail.com</a>
                     </li>
                 </ul>
             </div>
