--- a/about/index.html
+++ b/about/index.html
@@ -256,9 +256,9 @@
                 </h2>
                 <div class="section-content">
                     <div class="highlight-box">
-                        <p>大家好，我是小旗，来自于北京，因为喜欢搭建各种网站所以我想把这行做下去，当然我是业余的，主要在网站找大佬找同行学习各种相关知识。</p>
+                        <p>大家好，我是小旗，来自于北京，喜欢搭建各种网站项目，希望大家能够跟我一起学习各种知识，各种技能，共同进步！</p>
                     </div>
-                    <p>各种网站搭建，个人主页，博客网站，导航网站，影视网站，商城网站，支付收款网站等，还有安全优化，网站加速，服务器，域名必备的工具。>xi>
+                    <p>代搭Wordpress网站，个人主页，博客网站，导航网站，影视网站，商城网站，支付收款网站等，安全优化，网站加速，服务器，域名必备的工具等等，欢迎来咨询叨唠！>xi>
             </div>
 
             <div class="section">
@@ -306,12 +306,17 @@
                     <li>
                         <i class="fab fa-github"></i>
                         <strong>GitHub:</strong>
-                        <a href="https://github.com/" target="_blank">https://github.com/geeeeeeeek</a>
+                        <a href="https://github.com/xqdjwz" target="_blank">https://github.com/xqdjwz</a>
                     </li>
                     <li>
                         <i class="fas fa-globe"></i>
                         <strong>个人主页:</strong>
-                        <a href="https://web.gitapp.cn" target="_blank">https://xqdj.site</a>
+                        <a href="https://xqdj.site" target="_blank">https://xqdj.site</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-globe"></i>
+                        <strong>QQ:</strong>
+                        <a href="https://qm.qq.com/q/p3LjtJipGi" target="_blank">https://qm.qq.com/q/p3LjtJipGi</a>
                     </li>
                     <li>
                         <i class="fas fa-envelope"></i>
