--- a/about/index.html
+++ b/about/index.html
@@ -258,7 +258,7 @@
                     <div class="highlight-box">
                         <p>大家好，我是小旗，来自于北京，喜欢搭建各种网站项目，希望大家能够跟我一起学习各种知识，各种技能，共同进步！</p>
                     </div>
-                    <p>代搭Wordpress网站，个人主页，博客网站，导航网站，影视网站，商城网站，支付收款网站等，安全优化，网站加速，服务器，域名必备的工具等等，欢迎来咨询叨唠！
+                    <p>代搭Wordpress网站，个人主页，博客网站，导航网站，影视网站，商城网站，支付收款网站等，安全优化，网站加速，服务器，域名必备的工具等等，欢迎来咨询叨唠！</p>
             </div>
 
             <div class="section">
