--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#f9f9f9" />
     <title>小旗搭建导航 - 实用的资源导航综合网站</title>
-    <link rel="shortcut icon" href="./assets/images/favicon.png" />
+    <link rel="shortcut icon" href="./assets/images/xqdj.jpeg" />
     <meta name="keywords" content="在线工具网" />
     <meta name="description" content="在线网址导航, 各类开发工具、绘图绘画工具、md5、在线ps、base64、在线播放器、房贷计算器等" />
 
