--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                 <div class="container-fluid p-0">
 
                     <a href="" class="navbar-brand d-md-none" title="在线工具网">
-                        <img src="./assets/images/bt.png" class="logo-light"
+                        <img src="./assets/images/xqdjtx.png" class="logo-light"
                             alt="在线工具网">
-                        <img src="./assets/images/bt.png" class="logo-dark d-none"
+                        <img src="./assets/images/xqdjtx.png" class="logo-dark d-none"
                             alt="在线工具网">
                     </a>
 
@@ -5890,7 +5890,7 @@
 
             </div>
             <div class="footer-inner">
-                <div class="footer-text">本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：kefu308@gmail.com <br/>© 2021 - 2023 By <a href="https://github.com/geeeeeeeek/web_tool">Web_tool</a> | <a href="http://beian.miit.gov.cn/">京ICP备2023018588号</a><br/></div>
+                <div class="footer-text">本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：xqdj@protonmail.com <br/>© 2025 - 2028 By <a href="https://github.com/xqdjwz/xqdj_dh">小旗_搭建</a> | <a href="http://xqdj.site/">京ICP备2023018588号</a><br/></div>
             </div>
         </footer>
     </div>
