--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                                 alt="在线工具网">
                         </a>
                         <a href="" class="logo-collapsed">
-                            <img src="./assets/images/bt.png" height="40" class="logo-light"
+                            <img src="./assets/images/xqdj.jpeg" height="40" class="logo-light"
                                 alt="在线工具网">
-                            <img src="./assets/images/bt.png" height="40" class="logo-dark d-none"
+                            <img src="./assets/images/xqdj.jpeg" height="40" class="logo-dark d-none"
                                 alt="在线工具网">
                         </a>
                     </div>
